# app/Http/Controllers/UsersController.php
@@ -8,6 +8,27 @@ use Illuminate\Http\Request;
 use App\Http\Requests\StoreUsersRequest;
 use App\Http\Requests\UpdateUsersRequest;
 /**
+ * @OA\Get(
+ *   path="/api/users",
+ *   summary="Get all users",
+ *   description="Get all users without specifying an ID",
+ *   tags={"User"},
+ *   @OA\Response(
+ *       response=200,
+ *       description="OK",
+ *       @OA\JsonContent(
+ *           type="array",
+ *           @OA\Items(
+ *               type="object",
+ *               @OA\Property(property="id", type="integer"),
+ *               @OA\Property(property="name", type="string"),
+ *               @OA\Property(property="email", type="string"),
+ *               @OA\Property(property="password", type="string")
+ *           )
+ *       )
+ *   )
+ *)
+ *
  * @OA\Post(
  *     path="/api/users",
  *     summary="Create a new users",
@@ -130,6 +151,11 @@ class UsersController extends Controller
 
     public function store(Request $request)
     {
+        $request->validate([
+            'name' => 'string|required|min:3|max:15',
+            'email' => 'string|required|email|unique:users',
+            'password' => 'string|required|confirmed'
+            ]);
         $user = Users::create($request->all());
         return response()->json($user, 201);
     }
@@ -142,6 +168,11 @@ class UsersController extends Controller
 
     public function update(Request $request, $id)
     {
+        $request->validate([
+            'name' => 'string|required|min:3|max:15',
+            'email' => 'string|required|email|unique:users',
+            'password' => 'string|required|confirmed'
+            ]);
         $user = Users::findOrFail($id);
         $user->update($request->all());
         return response()->json($user, 200);
